[package]
name = "azure_keyvault_example"
version = "0.1.0"
edition = "2021"

[dependencies]
azure_identity = "0.22.0"                  # For ClientSecretCredential
azure_security_keyvault_secrets = "0.22.0" # For SecretClient and Key Vault operations
tokio = { version = "1.40.0", features = ["full"] } # Async runtime for Tokio