[package]
name = "certificate-management"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
azure_identity = "0.13"
azure_security_keyvault = "0.13"
azure_core = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
sha2 = "0.10"
base64 = "0.21"
openssl = "0.10"
rand = "0.8"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
hex = "0.4"