[package]
name = "certificate-management"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "tls-rustls"] }
thiserror = "1.0.64"
base64 = "0.22.1"
openssl = "0.10.72"
openssl-sys = "0.9"
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"
uuid = { version = "1.10.0", features = ["v4"] }
config = "0.14.0"
azure_security_keyvault_secrets = "0.3.0"
azure_identity = "0.24.0"
azure_core = "0.24.0"
reqwest = { version = "0.12.7", features = ["native-tls"] }
typespec_client_core = "0.3.0"
zeroize = "1.8.1"